latitude and longitude headers added
